Implement 'Users' and 'Products' routes
